Api spec for Search,Checkout and pagination
