# backend/src/routes/atenxionUser.routes.ts
@@ -3,9 +3,13 @@ import * as atenxionUserController from '../controllers/atenxionUser.controller'
 
 const router = Router();
 
+router.get('/products', atenxionUserController.getProducts);
+
 router.post('/cart', atenxionUserController.addToCart);
 router.put('/cart/:productId', atenxionUserController.updateCartItem);
 router.delete('/cart/:productId', atenxionUserController.removeCartItem);
+
+router.post('/checkout', atenxionUserController.checkout);
 
 router.get('/orders', atenxionUserController.getOrders);
 router.get('/orders/:id', atenxionUserController.getOrder);
